15643
the following produces a misleading error message:

{code}
scala> def f(x: Int = 1, y: Int, z: Int = 1) = 0
f: (x: Int,y: Int,z: Int)Int

scala> f(y = 1, m = 1)                          
<console>:7: error: not enough arguments for method f: (x: Int,y: Int,z: Int)Int
       f(y = 1, m = 1)
        ^
{code}
expected error message: "not found: value m"
